--- a/concept-1-flexbox/index.html
+++ b/concept-1-flexbox/index.html
@@ -26,7 +26,13 @@
       }
 
       @media (max-width: 768px) {
-        .nav {
+        nav {
+          flex-direction: column;
+          align-items: center;
+        }
+
+        .links {
+          display: flex;
           flex-direction: column;
           align-items: center;
         }
