--- a/concept-2-grid/index.html
+++ b/concept-2-grid/index.html
@@ -5,16 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cards Gallery</title>
     <style>
-      main .grid-container {
+      .grid-container {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         gap: 20px;
       }
 
-      main .card {
+      .card {
         display: flex;
-        justify-content: center;
+        flex-direction: column;
         align-items: center;
+        padding: 20px;
         box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
       }
 
@@ -41,8 +42,6 @@
           <p>This is a description for card 1.</p>
           <button>Read More</button>
         </div>
-      </div>
-      <div class="grid-container">
         <div class="card">
           <h1>grid 2 title</h1>
           <img
@@ -52,8 +51,6 @@
           <p>This is a description for card 2.</p>
           <button>Read More</button>
         </div>
-      </div>
-      <div class="grid-container">
         <div class="card">
           <h1>grid 3 title</h1>
           <img
@@ -63,8 +60,6 @@
           <p>This is a description for card 3.</p>
           <button>Read More</button>
         </div>
-      </div>
-      <div class="grid-container">
         <div class="card">
           <h1>grid 4 title</h1>
           <img
@@ -74,8 +69,6 @@
           <p>This is a description for card 4.</p>
           <button>Read More</button>
         </div>
-      </div>
-      <div class="grid-container">
         <div class="card">
           <h1>grid 5 title</h1>
           <img
@@ -85,8 +78,6 @@
           <p>This is a description for card 5.</p>
           <button>Read More</button>
         </div>
-      </div>
-      <div class="grid-container">
         <div class="card">
           <h1>grid 6 title</h1>
           <img
