--- a/concept-2-grid/index.html
+++ b/concept-2-grid/index.html
@@ -7,7 +7,7 @@
     <style>
       .grid-container {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
         gap: 20px;
       }
 
@@ -23,10 +23,10 @@
         width: 100%;
       }
 
-      @media (max-width: 768px) {
-        main .grid-container {
-          grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-        }
+      button:hover {
+        background-color: #333;
+        color: white;
+        cursor: pointer;
       }
     </style>
   </head>
